Accessibility: Separate 'symbols in switches' from highcontrast
I've heard reports from users who can't use highcontrast (because they are sensitive to that and need low contrast), and yet they would be helped by these extra symbols to indicate status.
macos has a separate setting:
Differentiate without color - Use shapes, in addition to or instead of color, to convey status or information.