universal-access: Expose new "show-status-shapes" setting

Whether switches indicate their state with an icon has been split
from the HighContrast stylesheet. Expose the new setting.

https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2675